--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -1,4 +1,4 @@
-/* css: 21:10 */
+/* css: day 7 21:10/6:30 */
 
 /* * {
       margin: 0;
@@ -15,14 +15,27 @@
       background-color: #f4f4f9;
   }
    */
+
+.card-container {
+      display: flex;
+      justify-content: space-around;
+      flex-wrap: wrap;
+  }
+
 .card {
       width: 300px;
-      background-color: #fff;
+      /* background-color: #fff; */
       border-radius: 5px;
       border: 1px solid #ccc;
       padding: 10px;
-      margin-top: 80px;
-      margin-left: 10px;
+      margin-top: 20px;
+      margin-bottom: 20px;
+      margin-left: 8px;
+      margin-right: 8px;
+      /* margin-top: 90px;
+      margin-left: 5px;
+      margin-right: 5px;
+      margin-bottom: -65px; */
       /* overflow: hidden; */
       /* box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); */
       box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
@@ -32,21 +45,21 @@
 .card:hover {
       transform: scale(1.05);
   }
-  
-.card-img {
+
+.card img {
       width: 100%;
-      height: auto;
+      height: 170px;
       display: block;
       border-radius: 5px;
   }
   
-.card-content {
+/* .card-content {
       padding: 16px;
-  }
+  } */
   
 .product-name {
       font-size: 1.2rem;
-      color: #333;
+      /* color: #333; */
       /* margin-bottom: 8px; */
       margin: 10px 0; 
   }
